--- a/css/main.css
+++ b/css/main.css
@@ -284,10 +284,19 @@ main.container-fluid {
 
 .template-offer-banner-map {
   height: 200px;
-  background-attachment: fixed;
+/*   background-attachment: fixed; */
   background-position: center;
   background-repeat: no-repeat;
+  position: relative;
   background-size: cover;
+}
+
+.template-offer-banner-map .overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .template-offer-banner-map-2 {
